Add sample section to biography.html

--- a/biography.html
+++ b/biography.html
@@ -69,6 +69,9 @@ present, he stands as proof that hardships do not define a person’s end but in
 
     
 
+<div>
+    <h3>Sample</h3>
+</div>
     
 </body>
 </html>
